<resources>
  <string name="About.blog">https://digibyte.io/</string>
  <string name="About.footer">Made by the global DigiWallet team. Version %1$s</string>
  <string name="About.privacy">Privacy Policy</string>
  <string name="About.reddit">https://www.reddit.com/r/Digibyte/</string>
  <string name="About.title">Fast, simple and safe!: DigiWallet for Android is the easiest way to get started sending and receiving DigiByte. Designed with both new and experienced users in-mind, DigiWallet for Android is simple enough for a first-time novice to use, yet powerful enough for regular power-users.</string>
  <string name="About.twitter">https://twitter.com/digibytecoin</string>
  <string name="AccessibilityLabels.close">Close</string>
  <string name="Alert.customKeyboard.android">It looks like you are using a third-party keyboard, which can record what you type and steal your Personal Recovery Key. Please switch to the default Android keyboard for extra protection.</string>
  <string name="Alert.error">Error</string>
  <string name="Alert.keystore.generic.android">There is a problem with your Android OS keystore, please contact support@digibyte.io</string>
  <string name="Alert.keystore.invalidated.android">Your DigiWallet encrypted data was recently invalidated because your Android lock screen was disabled.</string>
  <string name="Alert.keystore.title.android">Android KeyStore Error</string>
  <string name="Alerts.paperKeySet">Personal Recovery Key Set</string>
  <string name="Alerts.paperKeySetSubheader">Awesome!</string>
  <string name="Alerts.pinSet">PIN Set</string>
  <string name="Alerts.sendFailure">Send failed</string>
  <string name="Alerts.sendSuccess">Send Confirmation</string>
  <string name="Alerts.sendSuccessSubheader">DigiByte Sent!</string>
  <string name="Alerts.touchIdSucceeded.android">Fingerprint recognized</string>
  <string name="Button.cancel">Cancel</string>
  <string name="Button.ok">OK</string>
  <string name="Confirmation.amountLabel">Amount to Send:</string>
  <string name="Confirmation.feeLabel">Network Fee:</string>
  <string name="Confirmation.totalLabel">Total Cost:</string>
  <string name="ConfirmPaperPhrase.label">To make sure everything was written down correctly, please enter the following words from your Personal Recovery Key.</string>
  <string name="ConfirmPaperPhrase.word">Word #%1$s</string>
  <string name="DefaultCurrency.rateLabel">Exchange Rate</string>
  <string name="ErrorMessages.loopingLockScreen.android">DigiWallet can not be authenticated due to a bug in your version of Android. [Please tap here for more information.]</string>
  <string name="ErrorMessages.touchIdFailed.android">Fingerprint not recognized. Please try again.</string>
  <string name="Import.checking">Checking private key balance...</string>
  <string name="Import.confirm">Send %1$s from this private key into your wallet? The DigiByte network will receive a fee of %2$s.</string>
  <string name="Import.Error.empty">This private key is empty.</string>
  <string name="Import.Error.notValid">Not a valid private key</string>
  <string name="Import.Error.signing">Error signing transaction</string>
  <string name="Import.message">Importing a wallet transfers all the DigiByte from your other wallet into your DigiWallet using a single transaction.</string>
  <string name="Import.password">This private key is password protected.</string>
  <string name="Import.scan">Scan Private Key</string>
  <string name="Import.warning">Importing a wallet does not include transaction history or other details.</string>
  <string name="JailbreakWarnings.close">Close</string>
  <string name="JailbreakWarnings.messageWithoutBalance">DEVICE SECURITY COMPROMISED\n Any
    \'jailbreak\' app can access DigiWallet\'s keychain data and steal your DigiByte. Please only
    use DigiWallet on a non-jailbroken device.
  </string>
  <string name="JailbreakWarnings.title">WARNING</string>
  <string name="MenuButton.lock">Lock Wallet</string>
  <string name="MenuButton.security">Security Center</string>
  <string name="MenuButton.settings">Settings</string>
  <string name="MenuViewController.createDigiIDButton">Create New Digi-ID</string>
  <string name="MenuViewController.createButton">Create New Wallet</string>
  <string name="MenuViewController.recoverButton">Recover Wallet</string>
  <string name="NodeSelector.automaticButton">Switch to Automatic Mode</string>
  <string name="NodeSelector.connected">Connected</string>
  <string name="NodeSelector.enterBody">Enter Node IP address and port (optional)</string>
  <string name="NodeSelector.enterTitle">Enter Node</string>
  <string name="NodeSelector.manualButton">Switch to Manual Mode</string>
  <string name="NodeSelector.nodeLabel">Current Primary Node</string>
  <string name="NodeSelector.notConnected">Not Connected</string>
  <string name="NodeSelector.statusLabel">Node Connection Status</string>
  <string name="NodeSelector.title">DigiByte Nodes</string>
  <string name="PaymentProtocol.Errors.smallPayment">DigiByte payments can\'t be less than %1$s.</string>
  <string name="PaymentProtocol.Errors.smallTransaction">DigiByte transaction outputs can\'t be less than %1$s.</string>
  <string name="Prompts.NoScreenLock.body.android">A device screen lock is needed to safeguard your wallet. Go to \"Settings\" &gt; \"Security\" &gt; \"Screen lock\" and enable to continue.</string>
  <string name="Prompts.PaperKey.body">Your Personal Recovery Key must be saved in case you ever lose or change your phone. Tap here to continue.</string>
  <string name="Prompts.PaperKey.title">Action Required</string>
  <string name="Prompts.RecommendRescan.body">Your wallet may be out of sync. This can often be fixed by rescanning the blockchain.</string>
  <string name="Prompts.TouchId.body.android">Tap here to enable fingerprint authentication</string>
  <string name="Prompts.TouchId.title.android">Enable Fingerprint Authentication</string>
  <string name="Prompts.TouchId.usePin.android">PIN</string>
  <string name="Prompts.UpgradePin.body">DigiWallet has upgraded to using a 6-digit PIN. Tap here to upgrade.</string>
  <string name="Prompts.UpgradePin.title">Upgrade PIN</string>
  <string name="PushNotifications.body">Turn on notifications to receive special messages from DigiWallet in the future.</string>
  <string name="PushNotifications.label">Push Notifications</string>
  <string name="PushNotifications.title">Notifications</string>
  <string name="Receive.copied">Copied to clipboard.</string>
  <string name="Receive.request">Request an Amount</string>
  <string name="Receive.share">Share</string>
  <string name="Receive.title">Receive</string>
  <string name="RecoverWallet.done">Done</string>
  <string name="RecoverWallet.header">Recover Wallet</string>
  <string name="RecoverWallet.header_reset_pin">Reset PIN</string>
  <string name="RecoverWallet.instruction">Enter Personal Recovery Key</string>
  <string name="RecoverWallet.intro">Recover your DigiWallet with your Personal Recovery Key.</string>
  <string name="RecoverWallet.invalid">The Personal Recovery Key you entered is invalid. Please double-check each word and try again.</string>
  <string name="RecoverWallet.next">Next</string>
  <string name="RecoverWallet.subheader">Enter the Personal Recovery Key for the DigiWallet you want to recover.</string>
  <string name="RecoverWallet.subheader_reset_pin">To reset your PIN, enter the words from your Personal Recovery Key into the boxes below.</string>
  <string name="ReScan.alertAction">Sync</string>
  <string name="ReScan.alertTitle">Sync with Blockchain?</string>
  <string name="ReScan.body1">20-45 minutes</string>
  <string name="ReScan.body2">If a transaction shows as completed on the DigiByte network but not in your DigiWallet.</string>
  <string name="ReScan.body3">You repeatedly get an error saying your transaction was rejected.</string>
  <string name="ReScan.buttonTitle">Start Sync</string>
  <string name="ReScan.footer">You will not be able to send DigiByte while syncing with the blockchain.</string>
  <string name="ReScan.header">Sync Blockchain</string>
  <string name="ReScan.subheader1">Estimated time</string>
  <string name="ReScan.subheader2">When to Sync?</string>
  <string name="SecurityCenter.info">Enable all security features for maximum protection.</string>
  <string name="SecurityCenter.paperKeyDescription">The only way to access your DigiByte if you lose or upgrade your phone.</string>
  <string name="SecurityCenter.paperKeyTitle">Personal Recovery Key</string>
  <string name="SecurityCenter.pinDescription">Protects your DigiWallet from unauthorized users.</string>
  <string name="SecurityCenter.pinTitle">6-Digit PIN</string>
  <string name="SecurityCenter.title">Security Center</string>
  <string name="SecurityCenter.touchIdDescription">Conveniently unlock your DigiWallet and send DigiByte up to a set limit.</string>
  <string name="SecurityCenter.touchIdTitle.android">Fingerprint Authentication</string>
  <string name="Send.cameraUnavailabeMessage.android">Allow camera access in \"Settings\" &gt; \"Apps\" &gt; \"DigiWallet\" &gt; \"Permissions\"</string>
  <string name="Send.cameraUnavailabeTitle.android">DigiWallet is not allowed to access the camera</string>
  <string name="Send.containsAddress">The destination is your own address. You cannot send to yourself.</string>
  <string name="Send.descriptionLabel">Memo</string>
  <string name="Send.emptyPasteboard">Pasteboard is empty</string>
  <string name="Send.fee">Network Fee: %1$s</string>
  <string name="Send.invalidAddressTitle">Invalid Address</string>
  <string name="Send.isRescanning">Sending is disabled during a full rescan.</string>
  <string name="Send.noAddress">Please enter the recipient\'s address.</string>
  <string name="Send.pasteLabel">Paste</string>
  <string name="Send.scanLabel">Scan</string>
  <string name="Send.sendLabel">Send</string>
  <string name="Send.title">Send</string>
  <string name="Send.toLabel">To</string>
  <string name="Send.UsedAddress.firstLine">DigiByte addresses are intended for single use only.</string>
  <string name="Send.UsedAddress.secondLIne">Re-use reduces privacy for both you and the recipient and can result in loss if the recipient doesn\'t directly control the address.</string>
  <string name="Settings.about">About</string>
  <string name="Settings.advancedTitle">Advanced Settings</string>
  <string name="Settings.currency">Display Currency</string>
  <string name="Settings.importLeftMessage">Wallet to be Imported</string>
  <string name="Settings.importRightMessage">Your DigiWallet</string>
  <string name="Settings.importTitle">Import Wallet</string>
  <string name="Settings.manage">Manage</string>
  <string name="Settings.restore_label">Your DigiWallet on this Device</string>
  <string name="Settings.sync">Sync Blockchain</string>
  <string name="Settings.touchIdLimit.android">Fingerprint Authentication Spending Limit</string>
  <string name="Settings.wallet">Wallet</string>
  <string name="Settings.wipe">Start/Recover Another Wallet</string>
  <string name="StartPaperPhrase.body">Your Personal Recovery Key is the only way to restore your DigiWallet if your phone is lost, stolen, broken, or upgraded.\n\nWe will show you a list of words to write down on a piece of paper and keep safe.</string>
  <string name="StartPaperPhrase.buttonTitle">Write Down Personal Recovery Key</string>
  <string name="SyncingView.connecting">Connecting</string>
  <string name="SyncingView.header">Syncing</string>
  <string name="recurring_payments">Recurring Payments</string>
  <string name="recipients_address">Recipients Address:</string>
  <string name="set_recurring_payment_time">Set recurring payment time</string>
  <string name="add_recurring_payment_time">Add recurring payment</string>
  <string name="recurring_payment_label">Label:</string>
</resources>